  * Switch to source format “3.0 (quilt)”.
    - Remove quilt from Build-Depends.
    - Remove patch target in debian/rules.
    - Remove now unneeded README.source.
    - Refresh all patches.
  * Link camcontrol, mdconfig and dmesg directly to libbsd. Closes: #627129
  * Refactor source and tar name into SOURCE and TARNAME in debian/rules.

 -- Robert Millan <rmh@debian.org>  Wed, 09 Feb 2011 17:42:15 +0100

freebsd-utils (8.1-4) unstable; urgency=low

  [ Petr Salinger ]
  * enhance kbdcontrol.init, related to Debian Policy,
    9.8 Keyboard configuration. See: #605777.

 -- Aurelien Jarno <aurel32@debian.org>  Sat, 22 Jan 2011 23:44:13 +0100

freebsd-utils (8.1-3.1) unstable; urgency=high

  * Non-maintainer upload (requested by Petr).
  * Revert 032_delete_key.diff
    The proper solution needs more changes, unsuitable during deep freeze.
    See #605065, #605777, #607662.

 -- Robert Millan <rmh@debian.org>  Wed, 05 Jan 2011 10:05:19 +0100

freebsd-utils (8.1-3) unstable; urgency=low

  [ Aurelien Jarno ]
  * Add Catalan Debconf translation from Jordi Mallach (closes:
    bug#600624).
  * Add 032_delete_key.diff to conform to Debian Policy,
    9.8 Keyboard configuration. Closes: #605777.

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 19 Dec 2010 23:39:21 +0100

freebsd-utils (8.1-2) unstable; urgency=low

  [ Aurelien Jarno ]
  * freebsd-utils-udeb: add mdconfig.
  * Update Italian Debconf translation from Luca Monducci (closes:
    bug#593717).

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 22 Aug 2010 17:10:02 +0200

freebsd-utils (8.1-1) unstable; urgency=low

  [ Petr Salinger ]
  * Based on FreeBSD 8.1.

  [ Aurelien Jarno ]
  * Bumped Standards-Version to 3.9.1 (no changes).
  * Add arp to freebsd-net-tools

 -- Aurelien Jarno <aurel32@debian.org>  Fri, 30 Jul 2010 22:23:01 +0200

freebsd-utils (8.0-12) unstable; urgency=low

  [ Guillem Jover ]
  * Use kfreebsd-any instead of explicit architecture list.

  [ Aurelien Jarno ]