@@ -28,6 +28,7 @@ freebsd-utils (8.2-1) UNRELEASED; urgency=low
     - Refresh all patches.
   * Link camcontrol, mdconfig and dmesg directly to libbsd. Closes: #627129
   * Refactor source and tar name into SOURCE and TARNAME in debian/rules.
+  * Line-wrap PMAKE variable in debian/rules.
 
  -- Robert Millan <rmh@debian.org>  Wed, 09 Feb 2011 17:42:15 +0100
 
